# opti-hosts

./: Cargo.toml  README.md  README.zh-CN.md  openapitools.json  rustfmt.toml
.github/workflows/: dev-release.yml  tagged-release.yml
crates/globalping-client/: Cargo.toml  README.md
crates/globalping-client/.openapi-generator/: FILES
crates/globalping-client/docs/: BaseFinishedTestResult.md  ContinentCode.md  CreateMeasurementResponse.md  DnsTestAnswer.md  DnsTestHopResult.md  DnsTestHopResultTimings.md  FailedTestResult.md  FailedTestStatus.md  FinishedDnsTestResult.md  FinishedHttpTestResult.md  FinishedHttpTestResultAllOfHeaders.md  FinishedHttpTestResultAllOfTimings.md  FinishedMtrTestResult.md  FinishedMtrTestResultAllOfHops.md  FinishedMtrTestResultAllOfResolvedAddress.md  FinishedMtrTestResultAllOfResolvedHostname.md  FinishedMtrTestResultAllOfStats.md  FinishedPingTestResult.md  FinishedPingTestResultAllOfStats.md  FinishedPingTestResultAllOfTimings.md  FinishedSimpleDnsTestResult.md  FinishedTestStatus.md  FinishedTraceDnsTestResult.md  FinishedTracerouteTestResult.md  FinishedTracerouteTestResultAllOfHops.md  FinishedTracerouteTestResultAllOfTimings.md  InProgressTestResult.md  InProgressTestStatus.md  InlineObject.md  InlineObject1.md  Limits.md  (+48 more)
crates/opti-host/: Cargo.toml
crates/opti-host/src/: main.rs
crates/opti-host/src/measure/: constants.rs  globalping.rs  mod.rs  models.rs  ping.rs  utils.rs
crates/opti-host/src/parser/: definition.pest  mod.rs
scripts/: generate-openapi-client.sh
src/: main.rs
src/parser/: definition.pest  mod.rs
(+82 files in other folders)
