[package]
name = "opti-hosts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
pest = "2"
pest_derive = "2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surge-ping = "0.8"
rand = "0.9"
clap = { version = "4", features = ["derive"] }
